[gd_scene load_steps=4 format=2]

[ext_resource path="res://acrobot/Acrobot.gd" type="Script" id=1]
[ext_resource path="res://sprites/box.svg" type="Texture" id=2]
[ext_resource path="res://sprites/circle.svg" type="Texture" id=3]

[node name="Acrobot" type="Node2D"]
script = ExtResource( 1 )

[node name="Floor" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1, 0.01 )
texture = ExtResource( 2 )

[node name="Links" type="Node2D" parent="."]
scale = Vector2( 100, 100 )

[node name="Arm0" type="Node2D" parent="Links"]

[node name="Sprite" type="Sprite" parent="Links/Arm0"]
modulate = Color( 0, 0.8, 0.8, 1 )
scale = Vector2( 0.001, 0.005 )
texture = ExtResource( 2 )

[node name="Arm1" type="Node2D" parent="Links"]

[node name="Sprite" type="Sprite" parent="Links/Arm1"]
modulate = Color( 0, 0.8, 0.8, 1 )
scale = Vector2( 0.001, 0.005 )
texture = ExtResource( 2 )

[node name="Joint0" type="Node2D" parent="Links"]

[node name="Sprite" type="Sprite" parent="Links/Joint0"]
modulate = Color( 0.8, 0.8, 0, 1 )
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 3 )

[node name="Joint1" type="Node2D" parent="Links"]

[node name="Sprite" type="Sprite" parent="Links/Joint1"]
modulate = Color( 0.8, 0.8, 0, 1 )
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 3 )
